--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <script type="module" src="/main.js"></script>
+
+    <form class="container">
+      <input type="text" class="input-name" />
+      <button class="add-item">ADD</button>
+    </form>
   </body>
 </html>
