--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="/main.js"></script>
 
     <form class="container">
-      <input type="text" class="input-name" />
+      <input type="text" class="input-name" placeholder="New Input" />
       <button class="add-item">ADD</button>
     </form>
   </body>
