starting to do list functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body>
     <script type="module" src="/main.js"></script>
 
-    <form class="container">
-      <input type="text" class="input-name" placeholder="New Input" />
-      <button class="add-item">ADD</button>
-    </form>
+    <div class="container">
+      <form class="form">
+        <input type="text" class="input-name" placeholder="New Input" />
+        <button class="add-item">ADD</button>
+      </form>
+    </div>
   </body>
 </html>
