--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <form class="form">
         <input type="text" class="input-name" placeholder="New Input" />
         <button class="add-item">ADD</button>
+        <!-- <ul class="">
+
+        </ul> -->
       </form>
     </div>
   </body>
