--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
         <input type="text" class="input-name" placeholder="New Input" />
         <button class="add-item">ADD</button>
       </form>
-      <!-- <ul class="">
-
-      </ul> -->
+      <ul class="todo-list"></ul>
     </div>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
